# flatfs

./: .bumpify.toml  .gitignore  CHANGELOG.md  LICENSE.txt  README.md  pyproject.toml  tasks.py
.circleci/: config.yml
.github/actions/poetry-install/: action.yml
.github/workflows/: ci.yml
docs/source/: about.rst  conf.py  index.rst  quickstart.rst  requirements.txt
docs/source/api/: index.rst
docs/source/api/flatfs/: api.rst  backends.rst  exc.rst  helpers.rst  interface.rst
docs/source/api/flatfs/aio/: api.rst  backends.rst  helpers.rst  interface.rst
flatfs/: _compat.py  _export.py  _utils.py  api.py  backends.py  exc.py  helpers.py  interface.py
flatfs/aio/: api.py  backends.py  helpers.py  interface.py
scripts/: gen_api_docs.py
tests/: test_backends.py  test_utils.py
tests/conformance/: test_async_flatfs.py  test_flatfs.py
tests/unit/: test_backends.py  test_helpers.py  test_utils.py
tests/unit/aio/: test_helpers.py
