[project]
name = "flatfs"
version = "0.0.0"
description = "A minimal filesystem abstraction that treats file paths as keys and file contents as values, with pluggable backends (local, in-memory)."
authors = [
    {name = "Maciej Wiatrzyk",email = "maciej.wiatrzyk@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
invoke = "^3.0.3"
pytest-asyncio = "^1.3.0"
mockify = "^0.14.0"
pytest-cov = "^7.1.0"
ruff = "^0.15.12"
