[project]
name = "flatfs"
version = "0.0.0"
description = "Minimal filesystem abstraction with pluggable backends, treating paths as keys and file contents as values."
authors = [
    {name = "Maciej Wiatrzyk", email = "maciej.wiatrzyk@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
keywords = ["flat", "filesystem", "abstraction", "library"]
classifiers = [
    "Development Status :: 4 - Beta",
    #"Development Status :: 5 - Production/Stable"  <- Use this for first 1.x version
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.10,<4"
dependencies = [
]

[project.urls]
repository = "https://github.com/mwiatrzyk/flatfs"
"Bug Tracker" = "https://github.com/mwiatrzyk/flatfs/issues"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
black = "^26.3.1"
invoke = "^3.0.3"
pytest-asyncio = "^1.3.0"
mockify = "^0.14.0"
pytest-cov = "^7.1.0"
